namespace java info.matsumana.armeria.thrift

service HelloService {
    string hello(1:string name)
}
