namespace java info.matsumana.armeria.thrift

service PingService {
    string ping()
}
